output/bloodResetParser.java
// $ANTLR 3.5.1 /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g 2021-04-12 11:15:29

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class bloodResetParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ATOM", "ATTRIBDEF", "BLOC", "BLOCCLASSE", 
		"BLOCPRINCIPAL", "CAST", "CLASSDEF", "CLASSNAME", "COMMENT", "CONSDEF", 
		"DECLVARIABLE", "ELSE", "EXTENDS", "FORMALPARAM", "IF", "INST", "LISTDECLVARIABLE", 
		"LISTFORMALPARAM", "LISTINSTRUCT", "LISTOPERATEURS", "LISTPARAM", "LISTPARAMAPPELCONSTR", 
		"MESSAGE", "MESSOUSELECT", "METHODEDEF", "NAME", "NB", "PARAM", "ROOT", 
		"SELECT", "STR", "STRING", "THEN", "TYPERETOUR", "WHILE", "WS", "' is'", 
		"'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "':'", 
		"':='", "';'", "'<'", "'<>'", "'='", "'>'", "'Integer'", "'String'", "'as'", 
		"'class'", "'def'", "'do'", "'else'", "'extends'", "'if'", "'is'", "'new'", 
		"'override'", "'result'", "'return'", "'static'", "'super'", "'then'", 
		"'this'", "'var'", "'while'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int ATOM=4;
	public static final int ATTRIBDEF=5;
	public static final int BLOC=6;
	public static final int BLOCCLASSE=7;
	public static final int BLOCPRINCIPAL=8;
	public static final int CAST=9;
	public static final int CLASSDEF=10;
	public static final int CLASSNAME=11;
	public static final int COMMENT=12;
	public static final int CONSDEF=13;
	public static final int DECLVARIABLE=14;
	public static final int ELSE=15;
	public static final int EXTENDS=16;
	public static final int FORMALPARAM=17;
	public static final int IF=18;
	public static final int INST=19;
	public static final int LISTDECLVARIABLE=20;
	public static final int LISTFORMALPARAM=21;
	public static final int LISTINSTRUCT=22;
	public static final int LISTOPERATEURS=23;
	public static final int LISTPARAM=24;
	public static final int LISTPARAMAPPELCONSTR=25;
	public static final int MESSAGE=26;
	public static final int MESSOUSELECT=27;
	public static final int METHODEDEF=28;
	public static final int NAME=29;
	public static final int NB=30;
	public static final int PARAM=31;
	public static final int ROOT=32;
	public static final int SELECT=33;
	public static final int STR=34;
	public static final int STRING=35;
	public static final int THEN=36;
	public static final int TYPERETOUR=37;
	public static final int WHILE=38;
	public static final int WS=39;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "atom", "blocDeClasse", "blocSansCons", "attribDef", "formalOuPas", 
		"exprOperateur", "expr2", "permClassNameAvecExpr", "consSuper", "constante", 
		"consDef", "methodeDef", "factoParenthese", "messOuSelect", "envoie_message", 
		"exprFinale", "whileBoucle", "progPrincipal", "instruction", "instanciation", 
		"classDef", "formalParam", "expression", "identificateur", "prog", "devPerm", 
		"methodeOuCons", "condition", "choixHeritage", "choixNameClass", "bloc", 
		"condExpr", "param"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public bloodResetParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public bloodResetParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public bloodResetParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return bloodResetParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:43:1: prog : ( classDef )* progPrincipal -> ^( ROOT ( classDef )* progPrincipal ) ;
	public final bloodResetParser.prog_return prog() throws RecognitionException {
		bloodResetParser.prog_return retval = new bloodResetParser.prog_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope classDef1 =null;
		ParserRuleReturnScope progPrincipal2 =null;

		RewriteRuleSubtreeStream stream_progPrincipal=new RewriteRuleSubtreeStream(adaptor,"rule progPrincipal");
		RewriteRuleSubtreeStream stream_classDef=new RewriteRuleSubtreeStream(adaptor,"rule classDef");

		try { dbg.enterRule(getGrammarFileName(), "prog");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(43, 0);

		try {
			// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:43:6: ( ( classDef )* progPrincipal -> ^( ROOT ( classDef )* progPrincipal ) )
			dbg.enterAlt(1);

			// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:43:8: ( classDef )* progPrincipal
			{
			dbg.location(43,8);
			// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:43:8: ( classDef )*
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=2;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( (LA1_0==60) ) {
					alt1=1;
				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:43:8: classDef
					{
					dbg.location(43,8);
					pushFollow(FOLLOW_classDef_in_prog136);
					classDef1=classDef();
					state._fsp--;

					stream_classDef.add(classDef1.getTree());
					}
					break;

				default :
					break loop1;
				}
			}
			} finally {dbg.exitSubRule(1);}
			dbg.location(43,18);
			pushFollow(FOLLOW_progPrincipal_in_prog139);
			progPrincipal2=progPrincipal();
			state._fsp--;

			stream_progPrincipal.add(progPrincipal2.getTree());
			// AST REWRITE
			// elements: progPrincipal, classDef
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 43:32: -> ^( ROOT ( classDef )* progPrincipal )
			{
				dbg.location(43,35);
				// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:43:35: ^( ROOT ( classDef )* progPrincipal )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(43,37);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);
				dbg.location(43,42);
				// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:43:42: ( classDef )*
				while ( stream_classDef.hasNext() ) {
					dbg.location(43,42);
					adaptor.addChild(root_1, stream_classDef.nextTree());
				}
				stream_classDef.reset();
				dbg.location(43,52);
				adaptor.addChild(root_1, stream_progPrincipal.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(44, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "prog");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "prog"


	public static class progPrincipal_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "progPrincipal"
	// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:47:1: progPrincipal : '{' ( instruction )* '}' -> ^( BLOCPRINCIPAL ( instruction )* ) ;
	public final bloodResetParser.progPrincipal_return progPrincipal() throws RecognitionException {
		bloodResetParser.progPrincipal_return retval = new bloodResetParser.progPrincipal_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal3=null;
		Token char_literal5=null;
		ParserRuleReturnScope instruction4 =null;

		Object char_literal3_tree=null;
		Object char_literal5_tree=null;
		RewriteRuleTokenStream stream_77=new RewriteRuleTokenStream(adaptor,"token 77");
		RewriteRuleTokenStream stream_78=new RewriteRuleTokenStream(adaptor,"token 78");
		RewriteRuleSubtreeStream stream_instruction=new RewriteRuleSubtreeStream(adaptor,"rule instruction");

		try { dbg.enterRule(getGrammarFileName(), "progPrincipal");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(47, 0);

		try {
			// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:48:2: ( '{' ( instruction )* '}' -> ^( BLOCPRINCIPAL ( instruction )* ) )
			dbg.enterAlt(1);

			// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:48:3: '{' ( instruction )* '}'
			{
			dbg.location(48,3);
			char_literal3=(Token)match(input,77,FOLLOW_77_in_progPrincipal161);  
			stream_77.add(char_literal3);
			dbg.location(48,7);
			// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:48:7: ( instruction )*
			try { dbg.enterSubRule(2);

			loop2:
			while (true) {
				int alt2=2;
				try { dbg.enterDecision(2, decisionCanBacktrack[2]);

				int LA2_0 = input.LA(1);
				if ( (LA2_0==CLASSNAME||(LA2_0 >= NAME && LA2_0 <= NB)||LA2_0==STRING||LA2_0==42||LA2_0==45||LA2_0==47||(LA2_0 >= 57 && LA2_0 <= 58)||(LA2_0 >= 65 && LA2_0 <= 67)||(LA2_0 >= 69 && LA2_0 <= 70)||LA2_0==72||LA2_0==74||(LA2_0 >= 76 && LA2_0 <= 77)) ) {
					alt2=1;
				}

				} finally {dbg.exitDecision(2);}

				switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:48:7: instruction
					{
					dbg.location(48,7);
					pushFollow(FOLLOW_instruction_in_progPrincipal163);
					instruction4=instruction();
					state._fsp--;

					stream_instruction.add(instruction4.getTree());
					}
					break;

				default :
					break loop2;
				}
			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(48,20);
			char_literal5=(Token)match(input,78,FOLLOW_78_in_progPrincipal166);  
			stream_78.add(char_literal5);

			// AST REWRITE
			// elements: instruction
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 48:24: -> ^( BLOCPRINCIPAL ( instruction )* )
			{
				dbg.location(48,27);
				// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:48:27: ^( BLOCPRINCIPAL ( instruction )* )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(48,29);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCPRINCIPAL, "BLOCPRINCIPAL"), root_1);
				dbg.location(48,43);
				// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:48:43: ( instruction )*
				while ( stream_instruction.hasNext() ) {
					dbg.location(48,43);
					adaptor.addChild(root_1, stream_instruction.nextTree());
				}
				stream_instruction.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(49, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "progPrincipal");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "progPrincipal"


	public static class classDef_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "classDef"
	// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:52:1: classDef : 'class' CLASSNAME '(' ( formalOuPas ( ',' formalOuPas )* )? ')' choixHeritage -> ^( CLASSDEF CLASSNAME ^( LISTFORMALPARAM ( formalOuPas )* ) choixHeritage ) ;
	public final bloodResetParser.classDef_return classDef() throws RecognitionException {
		bloodResetParser.classDef_return retval = new bloodResetParser.classDef_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal6=null;
		Token CLASSNAME7=null;
		Token char_literal8=null;
		Token char_literal10=null;
		Token char_literal12=null;
		ParserRuleReturnScope formalOuPas9 =null;
		ParserRuleReturnScope formalOuPas11 =null;
		ParserRuleReturnScope choixHeritage13 =null;

		Object string_literal6_tree=null;
		Object CLASSNAME7_tree=null;
		Object char_literal8_tree=null;
		Object char_literal10_tree=null;
		Object char_literal12_tree=null;
		RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
		RewriteRuleTokenStream stream_60=new RewriteRuleTokenStream(adaptor,"token 60");
		RewriteRuleTokenStream stream_CLASSNAME=new RewriteRuleTokenStream(adaptor,"token CLASSNAME");
		RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
		RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
		RewriteRuleSubtreeStream stream_formalOuPas=new RewriteRuleSubtreeStream(adaptor,"rule formalOuPas");
		RewriteRuleSubtreeStream stream_choixHeritage=new RewriteRuleSubtreeStream(adaptor,"rule choixHeritage");

		try { dbg.enterRule(getGrammarFileName(), "classDef");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(52, 0);

		try {
			// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:53:2: ( 'class' CLASSNAME '(' ( formalOuPas ( ',' formalOuPas )* )? ')' choixHeritage -> ^( CLASSDEF CLASSNAME ^( LISTFORMALPARAM ( formalOuPas )* ) choixHeritage ) )
			dbg.enterAlt(1);

			// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:53:3: 'class' CLASSNAME '(' ( formalOuPas ( ',' formalOuPas )* )? ')' choixHeritage
			{
			dbg.location(53,3);
			string_literal6=(Token)match(input,60,FOLLOW_60_in_classDef186);  
			stream_60.add(string_literal6);
			dbg.location(53,11);
			CLASSNAME7=(Token)match(input,CLASSNAME,FOLLOW_CLASSNAME_in_classDef188);  
			stream_CLASSNAME.add(CLASSNAME7);
			dbg.location(53,21);
			char_literal8=(Token)match(input,42,FOLLOW_42_in_classDef190);  
			stream_42.add(char_literal8);
			dbg.location(53,25);
			// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:53:25: ( formalOuPas ( ',' formalOuPas )* )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==NAME||LA4_0==75) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:53:26: formalOuPas ( ',' formalOuPas )*
					{
					dbg.location(53,26);
					pushFollow(FOLLOW_formalOuPas_in_classDef193);
					formalOuPas9=formalOuPas();
					state._fsp--;

					stream_formalOuPas.add(formalOuPas9.getTree());dbg.location(53,38);
					// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:53:38: ( ',' formalOuPas )*
					try { dbg.enterSubRule(3);

					loop3:
					while (true) {
						int alt3=2;
						try { dbg.enterDecision(3, decisionCanBacktrack[3]);

						int LA3_0 = input.LA(1);
						if ( (LA3_0==46) ) {
							alt3=1;
						}

						} finally {dbg.exitDecision(3);}

						switch (alt3) {
						case 1 :
							dbg.enterAlt(1);

							// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:53:39: ',' formalOuPas
							{
							dbg.location(53,39);
							char_literal10=(Token)match(input,46,FOLLOW_46_in_classDef196);  
							stream_46.add(char_literal10);
							dbg.location(53,43);
							pushFollow(FOLLOW_formalOuPas_in_classDef198);
							formalOuPas11=formalOuPas();
							state._fsp--;

							stream_formalOuPas.add(formalOuPas11.getTree());
							}
							break;

						default :
							break loop3;
						}
					}
					} finally {dbg.exitSubRule(3);}

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}
			dbg.location(53,59);
			char_literal12=(Token)match(input,43,FOLLOW_43_in_classDef204);  
			stream_43.add(char_literal12);
			dbg.location(53,63);
			pushFollow(FOLLOW_choixHeritage_in_classDef206);
			choixHeritage13=choixHeritage();
			state._fsp--;

			stream_choixHeritage.add(choixHeritage13.getTree());
			// AST REWRITE
			// elements: formalOuPas, CLASSNAME, choixHeritage
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 53:77: -> ^( CLASSDEF CLASSNAME ^( LISTFORMALPARAM ( formalOuPas )* ) choixHeritage )
			{
				dbg.location(53,80);
				// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:53:80: ^( CLASSDEF CLASSNAME ^( LISTFORMALPARAM ( formalOuPas )* ) choixHeritage )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(53,82);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLASSDEF, "CLASSDEF"), root_1);
				dbg.location(53,91);
				adaptor.addChild(root_1, stream_CLASSNAME.nextNode());dbg.location(53,101);
				// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:53:101: ^( LISTFORMALPARAM ( formalOuPas )* )
				{
				Object root_2 = (Object)adaptor.nil();
				dbg.location(53,103);
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(LISTFORMALPARAM, "LISTFORMALPARAM"), root_2);
				dbg.location(53,119);
				// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:53:119: ( formalOuPas )*
				while ( stream_formalOuPas.hasNext() ) {
					dbg.location(53,119);
					adaptor.addChild(root_2, stream_formalOuPas.nextTree());
				}
				stream_formalOuPas.reset();

				adaptor.addChild(root_1, root_2);
				}
				dbg.location(53,133);
				adaptor.addChild(root_1, stream_choixHeritage.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(54, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "classDef");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "classDef"


	public static class choixHeritage_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "choixHeritage"
	// /home/lulu/Documents/Compil/pcl-2020_2021/bloodReset.g:56:1: choixHeritage : ( 'extends' CLASSNAME ' is' '{' blocDeClasse '}' -> ^( EXTENDS CLASSNAME ) ^( BLOCCLASSE blocDeClasse ) | ' is' '{' blocDeClasse '}' -> ^( BLOCCLASSE blocDeClasse ) );
	public final bloodResetParser.choixHeritage_return choixHeritage() throws RecognitionException {
		bloodResetParser.choixHeritage_return retval = new bloodResetParser.choixHeritage_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal14=null;
		Token CLASSNAME15=null;
		Token string_literal16=null;
		Token char_literal17=null;
		Token char_literal19=null;
		Token string_literal20=null;
		Token char_literal21=null;
		Token char_literal23=null;
		ParserRuleReturnScope blocDeClasse18 =null;
		ParserRuleReturnScope blocDeClasse22 =null;
